--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,4 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400&family=Space+Mono&display=swap");
-/* The Modal (background) */
 .popup-overlay {
   position: fixed;
   width: 100vw;
@@ -15,13 +13,12 @@
   display: none;
 }
 
-/* Modal Content/Box */
 .popup-contact {
   background-color: #fefefe;
   height: 620px;
   border: 4px solid black;
   overflow: hidden;
-  width: 44%; /* Could be more or less, depending on screen size */
+  width: 44%;
   animation: fadein 3s forwards;
 }
 @keyframes fadein {
@@ -80,17 +77,10 @@ label {
   font-weight: 500;
 }
 
-/* .borderShadow{
-  border-top : 1px solid transparent;
-    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2); 
-
-} */
 .containerPost {
-  margin-top: 100px;
+  margin-top: 130px;
   margin-left: 100px;
   margin-right: 100px;
-  /* border-top: 1px solid blueviolet;
-  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px; */
 }
 @media screen and (max-width: 589px) {
   .containerPost {
@@ -168,22 +158,22 @@ label {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7); /* Couleur de fond semi-transparente (noir avec 50% d'opacité) */
-  overflow: hidden; /* Ajout de cette propriété pour empêcher le débordement */
+  background-color: rgba(0, 0, 0, 0.7);
+  overflow: hidden;
   bottom: 0;
   opacity: 0;
   transition: opacity 0.3s ease;
 }
 .containerPost .container-img .fullscreen-icon {
+  position: absolute;
+  display: none;
   font-size: 50px;
   height: 20px;
-  position: absolute;
   top: 4%;
   right: 0;
   transform: translate(-50%, -50%);
   z-index: 10;
   cursor: pointer;
-  display: none;
 }
 .containerPost .photoLightbox {
   display: flex;
@@ -262,6 +252,7 @@ label {
   border-radius: 4px;
   background-color: #D8D8D8;
   border: none;
+  cursor: pointer;
 }
 #containerBtn-nav .containerBtn .contact_btn #contact-button:hover {
   background-color: black;
@@ -308,10 +299,23 @@ label {
   display: flex;
   justify-content: space-around;
 }
-#containerBtn-nav .containerBtn .containerNav .carousel-navigation .next-arrow {
+#containerBtn-nav .containerBtn .containerNav .imageThumbnail img {
+  top: 0;
+  left: 0;
+}
+#containerBtn-nav .containerBtn .containerNav .arrow {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+#containerBtn-nav .containerBtn .containerNav .arrow .prev-arrow {
+  text-decoration: none;
+  color: black;
   font-size: 30px;
 }
-#containerBtn-nav .containerBtn .containerNav .carousel-navigation .prev-arrow {
+#containerBtn-nav .containerBtn .containerNav .arrow .next-arrow {
+  text-decoration: none;
+  color: black;
   font-size: 30px;
 }
 
@@ -342,11 +346,8 @@ label {
 }
 
 .photo-connexe {
-  /*  display: flex;
-    justify-content: space-between;
-  */
   display: grid;
-  grid-template-columns: 50% 50%; /* Définit deux colonnes, chacune avec une largeur de 50% */
+  grid-template-columns: 50% 50%;
   gap: 5px;
   flex-wrap: wrap;
 }
@@ -356,13 +357,8 @@ label {
   }
 }
 .photo-connexe .photoLightbox {
-  /*   width: 40vw;
-    /* La moitié de la largeur du viewport */
-  /* La moitié de la largeur du viewport, pour former un carré */
   width: 100%;
-  /* La moitié de la largeur du viewport */
   height: 40vw;
-  /* La moitié de la largeur du viewport, pour former un carré */
   object-fit: cover;
 }
 @media screen and (max-width: 576px) {
@@ -402,44 +398,12 @@ label {
   }
 }
 
-.imageThumbnail img {
-  top: 0;
-  left: 0;
-}
-
-.arrow {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-.arrow .prev-arrow {
-  text-decoration: none;
-  color: black;
-  font-size: 30px;
-}
-.arrow .next-arrow {
-  text-decoration: none;
-  color: black;
-  font-size: 30px;
-}
-
-/* .thumbnail-preview {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100px; /* Ajustez la taille selon vos besoins */
-/* height: auto;
-    background-color: rgba(255, 255, 255, 0.9);
-    border: 1px solid #ddd;
-    padding: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-    display: none; */
 .containerPhoto {
+  display: grid;
+  grid-template-columns: 50% 50%;
   margin-left: 100px;
   margin-right: 100px;
   margin-top: 50px;
-  display: grid;
-  grid-template-columns: 50% 50%;
   gap: 5px;
 }
 @media screen and (max-width: 576px) {
@@ -454,15 +418,9 @@ label {
     margin-right: 40px;
   }
 }
-.containerPhoto .container-row {
-  /* L'espace est soustrait pour prendre en compte l'espacement entre les colonnes */
-  /* Ajustez la largeur selon vos préférences */
-}
 .containerPhoto .photoLightbox {
   width: 100%;
-  /* La moitié de la largeur du viewport */
   height: 40vw;
-  /* La moitié de la largeur du viewport, pour former un carré */
   object-fit: cover;
 }
 @media screen and (max-width: 576px) {
@@ -514,7 +472,7 @@ label {
 }
 
 .overlay-effect {
-  overflow: hidden; /* Ajout de cette propriété pour empêcher le débordement */
+  overflow: hidden;
   position: absolute;
   top: 0;
   left: 0;
@@ -621,7 +579,6 @@ label {
 #container-filter #categorie-filter {
   width: 45%;
   position: relative;
-  /* border: 1px solid black; */
 }
 @media screen and (max-width: 768px) {
   #container-filter #categorie-filter {
@@ -699,6 +656,7 @@ label {
 @keyframes fadeInUp {
   from {
     transform: translateY(-30px);
+    opacity: 0;
   }
   to {
     transform: translateY(0);
@@ -708,7 +666,6 @@ label {
 #format-filter {
   width: 45%;
   position: relative;
-  /* border: 1px solid black; */
 }
 @media screen and (max-width: 768px) {
   #format-filter {
@@ -788,6 +745,7 @@ label {
 @keyframes fadeUp {
   from {
     transform: translateY(-30px);
+    opacity: 0;
   }
   to {
     transform: translateY(0);
@@ -808,7 +766,6 @@ label {
 #container-date {
   width: 45%;
   position: relative;
-  /* border: 1px solid black; */
 }
 @media screen and (max-width: 768px) {
   #container-date {
@@ -886,122 +843,13 @@ label {
 @keyframes fadeIn {
   from {
     transform: translateY(-30px);
+    opacity: 0;
   }
   to {
     transform: translateY(0);
     opacity: 1;
   }
 }
-/* 
-
-
-@keyframes fadeInUp {
-  from {
-    transform: translateY(-30px); /* Anciennement translate3d(0, 30px, 0); */
-/* 
-@keyframes fadeInDown {
-  from {
-    transform: translateY(0); /* Anciennement translate3d(0, 0, 0); */
-/*
-#filter{
-width: 100%;
-display: flex;
-gap:15px;
-
-	.cat-format{
-		width: 50%;
-		display: flex;
-		justify-content: space-between;
-		gap: 5px;
-
-
-	}
-
-	.flexRow{
-		display: flex;
-		justify-content: end;
-		width: 50%;
-
-	}
-
-}
-
-.select-cat 
-{
-//   max-width: 25%;
-
-width: 25%;
-  .select-btn {
-    position: relative;
-    display: flex;
-	width: 100%;
-    height: 35px;
-    background: #fff;
-    padding: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
-    border-radius: 8px;
-    border: 2px solid #D8D8D8;
-    align-items: center;
-    cursor: pointer;
-    justify-content: space-between;
-	&:hover{
-		border: 2px solid blue;
-	}
-  }
-
-  .list {
-    display: none;
-    position: absolute;
-    width: 250px;
-    overflow-y: auto;
-    max-height: 295px;
-    margin: 0;
-    padding-top: 50px;
-    padding-left: 0;
-    z-index: 999;
-    background-color: white;
-    border-radius: 0 0 8px 8px;
-    animation: fadeInDown 3s ease-in-out;
-
-
-    .option {
-      padding-bottom: 10px;
-      list-style: none;
-      margin: 0;
-      padding-left: 15px;
-      padding-top: 10px;
-
-      &:hover {
-        background-color: red;
-        cursor: pointer;
-      }
-    }
-  }
-}
-
-
-.chevron-down {
-  transition: 0.3s;
-  height: 25px;
-}
-
-.select-cat.active {
-  .select-btn {
-    img {
-      transform: rotate(-180deg);
-
-    }
-  }
-
-  .list {
-    display: block;
-    opacity: 0;
-    z-index: 10;
-    animation: fadeInUp 2s forwards;
-
-  }
-} */
 /* $color_1: #333;
 
 @keyframes fadeInUp {
@@ -1135,6 +983,7 @@ width: 25%;
 @media screen and (max-width: 785px) {
   .navbar-nav {
     display: none;
+    position: fixed;
     flex-direction: column;
     z-index: 999;
     height: calc(100% - 80px);
@@ -1142,7 +991,6 @@ width: 25%;
     align-items: center;
     background: red;
     transition: top 1s ease;
-    position: fixed;
     width: 100%;
     bottom: 0;
     margin: 0 !important;
@@ -1178,14 +1026,14 @@ width: 25%;
 
 #lightbox {
   display: none;
-  position: fixed; /* fixée et qui prend tout l'écran */
-  z-index: 1000; /* Pour être sûr de passer au dessus du reste */
+  position: fixed;
+  z-index: 1000;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.8); /* noire avec transparence */
-  background-size: contain; /* l'image occupe tout l'espace disponible */
+  background-color: rgba(0, 0, 0, 0.8);
+  background-size: contain;
 }
 #lightbox .close {
   position: fixed;
@@ -1234,18 +1082,11 @@ width: 25%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /*  display: flex;
-   justify-content: center;
-   align-items: center;
-   margin-left: 200px;
-   margin-right: 200px; */
 }
 .lightbox-contain img {
   width: 100%;
   max-width: 100%;
   height: 70vh;
-  /*   max-width: 100%;
-   height: 100vh; */
   object-fit: cover;
 }
 .lightbox-contain .infoPhoto {
@@ -1264,7 +1105,6 @@ width: 25%;
 body {
   margin: 0;
   text-transform: uppercase;
-  height: 100%;
 }
 
 #navigation {
@@ -1308,9 +1148,41 @@ body {
   font-weight: bold;
 }
 
-/* .menu-full {
-    @media screen  and (max-width :785px) {
-    display: none; /* menu caché par défaut */
+.banner {
+  position: relative;
+  text-align: center;
+}
+.banner img {
+  position: relative;
+  height: calc(56.25vw - 80px);
+  width: 100vw;
+  object-fit: cover;
+}
+
+h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 70px;
+  -webkit-text-stroke: 1px white;
+  color: transparent;
+  font-style: oblique;
+  font-weight: 500;
+  width: 100%;
+  margin: 0;
+}
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 45px;
+  }
+}
+@media screen and (max-width: 576px) {
+  h1 {
+    font-size: 35px;
+  }
+}
+
 #footer {
   display: flex;
   justify-content: center;
@@ -1365,41 +1237,6 @@ body {
   #footer .textFooter {
     padding-bottom: 40px;
     padding-top: 15px;
-  }
-}
-
-.banner {
-  position: relative;
-  text-align: center;
-}
-.banner img {
-  position: relative;
-  height: calc(56.25vw - 80px); /* Soustraire la hauteur de l'en-tête */
-  width: 100vw;
-  object-fit: cover;
-}
-
-h1 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 70px;
-  -webkit-text-stroke: 1px white;
-  color: transparent;
-  font-style: oblique;
-  font-weight: 500;
-  width: 100%;
-  margin: 0;
-}
-@media screen and (max-width: 768px) {
-  h1 {
-    font-size: 45px;
-  }
-}
-@media screen and (max-width: 576px) {
-  h1 {
-    font-size: 35px;
   }
 }
 
