--- a/sass/lightbox.scss
+++ b/sass/lightbox.scss
@@ -1,86 +1,77 @@
 #lightbox {
-display: none;
-    position: fixed; /* fixée et qui prend tout l'écran */
-    z-index: 1000; /* Pour être sûr de passer au dessus du reste */
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background-color: rgba(0,0,0, 0.8); /* noire avec transparence */
-    background-size: contain; /* l'image occupe tout l'espace disponible */
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  background-size: contain;
 
-  .close{
+  .close {
     position: fixed;
     font-size: 50px;
     color: white;
     right: 20px;
-    top : 20px;
-    cursor : pointer;
- 
+    top: 20px;
+    cursor: pointer;
   }
 
-  .prevArrow{
+  .prevArrow {
     position: fixed;
     color: white;
     text-transform: none;
-   top: 50%;
-   left : 14%;
-   cursor: pointer;
-   font-size: 11px;
-   @media screen and (max-width: 776px){
-    top: 9%;
-    left: 25%;
+    top: 50%;
+    left: 14%;
+    cursor: pointer;
+    font-size: 11px;
+
+    @media screen and (max-width: 776px) {
+      top: 9%;
+      left: 25%;
+    }
   }
 
-  }
-  .nextArrow{
+  .nextArrow {
     position: fixed;
     color: white;
     text-transform: none;
     right: 15%;
-    top : 50%;
+    top: 50%;
     font-size: 11px;
-
     cursor: pointer;
-     
-    @media screen and (max-width: 776px){
+
+    @media screen and (max-width: 776px) {
       top: 9%;
       right: 25%;
     }
-      
-    }
-  
   }
+}
 
-  .lightbox-contain{
-     position: fixed;
-    width: 50%;
-    margin: auto;
-    max-width: 1200px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); 
-  /*  display: flex;
-   justify-content: center;
-   align-items: center;
-   margin-left: 200px;
-   margin-right: 200px; */
-     img {
+.lightbox-contain {
+  position: fixed;
+  width: 50%;
+  margin: auto;
+  max-width: 1200px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
+  img {
     width: 100%;
     max-width: 100%;
-    height:70vh;
-   /*   max-width: 100%;
-    height: 100vh; */
+    height: 70vh;
     object-fit: cover;
-
   }
-  .infoPhoto{
+
+  .infoPhoto {
     display: flex;
     justify-content: space-between;
-    p{
-      color : white;
+
+    p {
+      color: white;
       margin: 0;
     }
   }
-  }
+}
