--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&family=Space+Mono&display=swap');
 @import 'modale';
 @import 'single';
-@import 'navigation';
 @import 'home';
 @import 'overlay';
 @import 'filter';
@@ -15,17 +14,10 @@
 body {
     margin: 0;
     text-transform: uppercase;
- 
-        height: 100%;
-
-//overflow: hidden;
-      //  overflow: hidden; /* Pour éviter les barres de défilement */
 
 }
 
-
-
-
+//NAVBAR 
 #navigation {
     display: flex;
     align-items: center;
@@ -35,16 +27,13 @@ body {
     position: fixed;
     z-index: 99;
     background-color: white;
-top : 0;
- border-bottom : 1px solid transparent;
- box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
-    @media screen and (max-width :600px) {
-        top :0;
-    
-    
-    }
+    top: 0;
+    border-bottom: 1px solid transparent;
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
 
- 
+    @media screen and (max-width :600px) {
+        top: 0;
+    }
 
     #logo {
         height: 13px;
@@ -53,43 +42,64 @@ top : 0;
         @media screen and (max-width :589px) {
             margin-left: 40px;
             height: 10px;
+        }
     }
 
-  
+    .navbar-nav {
+        list-style: none;
+        margin-right: 65px;
+    }
+
+    a {
+        margin-right: 40px;
+        text-decoration: none;
+        color: black;
+
+        &:hover {
+            font-weight: bold;
+        }
+    }
 }
 
-.navbar-nav {
-    
-    list-style: none;
-    margin-right: 65px;
 
-  
+//HERO HEADER
+.banner {
+    position: relative;
+    text-align: center;
 
+    img {
+        position: relative;
+        height: calc((100vw / 16 * 9) - 80px);
+        width: 100vw;
+        object-fit: cover;
+    }
 }
 
-a {
-    margin-right: 40px;
-    text-decoration: none;
-    color: black;
+h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 70px;
+    -webkit-text-stroke: 1px white;
+    color: transparent;
+    font-style: oblique;
+    font-weight: 500;
+    width: 100%;
+    margin: 0;
 
-    &:hover{
-        font-weight: bold;
+    @media screen and (max-width:768px) {
+        font-size: 45px;
+    }
+
+    @media screen and (max-width:576px) {
+        font-size: 35px;
     }
 
 }
-}
-/* .menu-full {
-    @media screen  and (max-width :785px) {
-    display: none; /* menu caché par défaut */
-//  text-align: center;
-// padding-top: 25px;
-// background: red;
-// height: 100vh;
-// overflow: hidden;
-// }
-//} */
 
 
+//FOOTER
 #footer {
     display: flex;
     justify-content: center;
@@ -103,8 +113,6 @@ a {
             flex-direction: column;
         }
     }
-
-
 
     #menu-footer-menu {
         display: flex;
@@ -121,16 +129,13 @@ a {
             margin-top: 30px;
             margin-right: 0;
         }
-     
-
-
 
         li {
             margin: 25px;
-           margin-bottom: 10px;
+            margin-bottom: 10px;
             margin-top: 10px;
-            @media screen and (max-width:580px) {
 
+            @media screen and (max-width:580px) {
                 padding-top: 15px;
             }
 
@@ -138,72 +143,19 @@ a {
                 color: black;
                 text-decoration: none;
 
-                &:hover{
+                &:hover {
                     font-weight: bold;
                 }
-
             }
         }
-
     }
 
     .textFooter {
-       margin-top: 10px;
+        margin-top: 10px;
+
         @media screen and (max-width:580px) {
-          
             padding-bottom: 40px;
             padding-top: 15px;
         }
-     
     }
-
-
 }
-
-.banner {
-    position: relative;
-    text-align: center;
-
-
-    img {
-        position: relative;
-      height: calc((100vw / 16 * 9) - 80px); /* Soustraire la hauteur de l'en-tête */
-  
-        width: 100vw;
-        object-fit: cover;
-     
-            
-        }
-
-    }
-
-    h1 {
-
-        //transform: translateX(-50%);
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 70px;
-        -webkit-text-stroke: 1px white;
-        color: transparent;
-        font-style: oblique;
-        font-weight: 500;
-        width: 100%;
-        margin: 0;
-
-        @media screen and (max-width:768px){
-            font-size: 45px;
-        }
-        @media screen and (max-width:576px){
-            font-size: 35px;
-        }
-
-
-
-
-
-
-
-
-    }
